typescript/checker/tests/conformance/es6/functionDeclarations/FunctionDeclaration3_es6.ts.stderr
error: ReferencedInInit {
    span: Span {
        lo: BytePos(
            36,
        ),
        hi: BytePos(
            41,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/functionDeclarations/FunctionDeclaration3_es6.ts:2:20
  |
2 | function f(yield = yield) {
  |                    ^^^^^

